--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="css/angular-csp.css" rel="stylesheet"/>
     <link href="css/index.min.css" rel="stylesheet"/>
 
-    <script src="js/angular.js"></script>
+    <script src="js/angular.min.js"></script>
     <script src="js/ui-bootstrap-tpls.min.js"></script>
     <title>五行性理测试</title>
   </head>
