Fix #5 random question

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       </div><!-- hero-unit -->
       <div class="ng-hide" ng-show="p.type == END">
         <div id="container" style="min-width: 410px; max-width: 500px; height: 450px; margin: 0 auto"></div>
-        <button class="btn btn-success btn-large pull-right" ng-click="num = 0">
+        <button class="btn btn-success btn-large pull-right" ng-click="init()">
           <i class="fa fa-reply"></i>
           重新开始
         </button>
