--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache" ng-app="five" data-ng-csp>
+<html ng-app="five" data-ng-csp>
   <head>
     <meta charset="utf-8" />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
