--- a/src/index.html
+++ b/src/index.html
@@ -117,5 +117,8 @@
     <script src="js/highcharts-more.js"></script>
     <script src="js/exporting.js"></script>
     <script src="js/index.min.js"></script>
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
   </body>
 </html>
