--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7 ng-app: five;" lang="zh_CN"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8 ng-app: five;" lang="zh_CN"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9 ng-app: five;" lang="zh_CN"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js ng-app: five;" lang="zh_CN"><!--<![endif]-->
+<html xmlns:ng="http://angularjs.org" class="ng-app" ng-app="five" lang="zh_CN">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/font-awesome.min.css" rel="stylesheet"/>
     <link href="css/angular-csp.css" rel="stylesheet"/>
