--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="css/angular-csp.css" rel="stylesheet"/>
+    <link href="http://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"/>
+
     <link href="css/index.min.css" rel="stylesheet" media="screen"/>
     <link href="css/print.min.css" rel="stylesheet" media="print"/>
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge" /><![endif]-->
@@ -22,7 +22,7 @@
         document.createElement('ng:view');
       </script>
     <![endif]-->
-    <script src="js/angular.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
     <title>五行性理测试</title>
   </head>
   <body>
@@ -123,10 +123,10 @@
         http://www.wtb21.com/
       </a>
     </div><!-- footer -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/highcharts.js"></script>
-    <script src="js/highcharts-more.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://libs.baidu.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script src="http://code.highcharts.com/3.0.7/highcharts.js"></script>
+    <script src="http://code.highcharts.com/3.0.7/highcharts-more.js"></script>
     <script src="js/index.min.js"></script>
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
